@@ -1,3 +1,8 @@
+2003-08-17  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4-cvs-b134
+
+        * Fix bug in Nuke integration where the language was never saved.
+          (Thanks Warren).
+
 ****NOTE: Code Freeze for 1.4-RC1 ********
 
 2003-08-16 Jens Tkotz  <jens@peino.de> 1.4-cvs-b133
